Stylized contact tr

--- a/style/style.css
+++ b/style/style.css
@@ -32,183 +32,8 @@ body::-webkit-scrollbar {
     width: 13px;
     background-color: #F5F5F5;
 } 
-/* For index deals display */
-.content{
-    width: 100%;
-    height: 88vh;
-    background-color: blue;
-    margin: 5vh 0px;
-    position: relative;
-}
-.content:nth-child(2n){
-    background-color: green;
-}
-/* IMPORTANT */
 
 
-
-/* ********************************************************************************* */
-/* Styling Navigation bar section */
-nav {  
-    /* Nav bar will always cover view width */
-    width: 100%;
-    /* Nav bar max width for large screen*/
-    max-width: 2054px;
-    /* If change bar height you will need to change relative height of all items within */
-    height: 13vh;
-    background-color: rgba(255,255,255,0.96);
-    /* Set position relative as to position inner items freely contained within */
-    position: fixed;
-    z-index: 4;
-    transition: all 2s linear;
-}
-.navItem{
-    /* set all display items horizontal and position freely within bar */
-    display: inline-block;
-    position: absolute;
-}
-.shoppingCartLogoContainer{
-    left: 90%;   
-    top: 2.3vh; /*If change bar height this needs change*/
-}
-
-.aboutLink, .contactLink, .dealsLink{
-    font-family: "Segoe UI";
-    font-size: 4vh; 
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    text-align: center;
-}
-.aboutLink:hover, .contactLink:hover, .dealsLink:hover{
-    text-decoration: underline;
-}
-.aboutLink{
-    top: 20%;
-    /* position item for proportional display */
-    left:calc(252/2054*100vw);
-}
-.contactLink{
-    top: 20%;
-    /* position item for proportional display */
-    left:calc(464/2054*100vw);
-}
-.dealsLink{
-    top: 20%;
-    /* position item for proportional display */
-    left:calc(689/2054*100vw);
-}
-.brandLogo{
-    background-image: url("../img/brandLogo/travelExpertLogo.png");
-    background-size: cover;
-    background-position: center;
-    width: 12vw;
-    height: 12vh;
-    left: 47%;
-    top: 6%;  /*Needs edit if bar height change*/
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-}
-.brandLogo:hover{
-    background-image: url("../img/brandLogo/travelExpertLogoHover.png");
-}
-.signInButton:hover,.shoppingCartLogoContainer:hover,#barBox:hover{ /*Mouse Over the logo will be cursor*/
-    cursor: pointer;
-}
-.signInButton{
-    font-family: "Segoe UI Symbol";
-    font-weight: 700;
-    font-size: 4vh;
-    text-align: center;
-    color: white;
-    background-color: black;
-    border: none;
-    border-radius: 8px;
-    height: 8vh;
-    width: 9vw;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    left: 70%;
-    top: 16%;
-}
-/*Styling for Icon for more*/
-.leftIconMore{
-    position: fixed;
-    width: 12vh;
-    height: 12vh;
-    left: 2%;
-    z-index: 5;
-    transition: all 0.8s linear;
-}
-/* inner box that contains the horizontal bars */
-#barBox{
-top: 50%;
-left: 50%;
-transform: translate(-50%,-60%);
-position: relative;
-/* change width the bars will stretch */
-width: calc(75/160*100%);
-/* change height the bars will space out */
-height: calc(50/160*100%);
-background-color: transparent;
-transition: all 0.2s linear;
-}
-#bar1,#bar2,#bar3{
-position: absolute;
-width: 100%;
-height: calc(9/50*100%);
-background-color: black;  
-border-radius: 1px;
-}
-#bar1{
-top: 0%;
-}
-#bar2{
-top: calc(20/50*100%);
-}
-#bar3{
-bottom: 0%;
-}
-
-/* ***************************Nav Styling Ends****************************************** */
-
-
-
-
-/* ***************************************************************************************** */
-/* HEADER HOME styling */
-.homeHeader{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
-.exploreImage{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-.videoOverlay{
-    position: absolute;
-    opacity: 0.5;
-    background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(0,0,0,1) 0%, rgba(89,89,89,1) 0%, rgba(75, 11, 27, 0.747) 0%, rgba(3,3,3,0.52) 69%, rgba(28,28,28,0.36) 91%, rgba(19,19,19,0.3) 100%);
-}
-.defaultImage{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-image: url('../img/homeExplore/dawnMountain.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-video.homeHeaderVideo{
-    object-fit: fill;
-    left: 0; 
-    position: absolute;  
-    width: 100% ; 
-    height: auto;
-}
 .exploreImage h1,.exploreImage p{
     font-family:"Segoe UI";
     position: absolute;
@@ -282,16 +107,7 @@ video.homeHeaderVideo{
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
-.slider-dots li {
-  color: #000;
-  display: inline;
-  font-size: 7vh;
-  margin-right: 5px;
-  cursor:pointer;
-}
-.slider-dots li.active-dot {
-  color: #fff;
-}
+
 /* **********************************Header Home Styling Ends*************************************** */
 
 
@@ -359,8 +175,8 @@ main{
     text-shadow: -2px 1px 2px rgba(255, 255, 255, 0.64);
 }
 .hotDealBg{
-    background-size: cover;
-    background-position: center;
+    background-size: 105% 115%;
+    background-repeat: no-repeat;
 }
 .priceTag{
     width: 12%;
@@ -448,76 +264,6 @@ main{
 .reviews:hover{
     color: rgb(0, 255, 179);
 }
-.packageTimeframe{
-    top: 46%;
-    left: 11%;
-    width: 64%;
-    font-size: 3.2vh;
-}
-.startDate,.endDate{
-    padding: 1%;
-    color: #00B1FF;
-}
-.starsContainer{
-    position: absolute;
-    width: 51vh;
-    top: 32%;
-    left: 13%;
-}
-.packageDescription{
-    font-weight: 300;
-    width: 90%;
-    height: 35%;
-    top: 61%;
-    font-size: 3.5vh;
-    background-color: transparent;
-    overflow-y: auto;
-    overflow-x: none;
-    padding: 0 5%;
-    left: 4%;
-}
-.packageDescription::-webkit-scrollbar {
-    width: 6px;
-    background-color: #F5F5F5;
-} 
-.packageDescription::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0,0.3);
-    border-radius: 25px;
-}
-.addToCart{
-    position: absolute;
-    top: 75%;
-    left: 8%;
-    width: 58px;
-    height: 48px;
-    border-radius: 10px;
-    background-color: rgba(0,0,0,0.8);
-    color: white;
-    cursor: pointer;
-}
-.addToCart:hover{
-    border-radius: 10px;
-    color: black;
-    background-color: rgba(255,255,255,0.8);
-}
-/* *************************************************************************************************** */
-
-
-
-
-/* *************************************************************************************************** */
-/* DEALS PAGE STYLING */
-main.dealsContent{
-    padding-top: 1vh;
-    padding-bottom: 0;
-    height: 150vh;
-    background-color: rgb(31, 21, 21);
-    position: relative;
-    color: white;
-}
-
-header.dealsHeader{
-    top: 0;
     left: 0;
     position: relative;
     width: 100%;
@@ -588,305 +334,6 @@ p.costTag, .tagPer{
     color: white;
     position: absolute;
 }
-p.costTag{
-    text-align: center;
-    top: 19%;
-    width: 100%;
-}
-.pkgCost{
-    color: rgb(0, 255, 128);
-    font-size: 180%;
-    font-weight: 700;
-}
-.tagPer{
-    left: 30%;
-    top: 40%;
-}
-h1.pkgTitle{
-    position: absolute;
-    font-weight: 500;
-    color: black;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    font-size: 3.6vh;
-}
-.pkgSubDesc{
-    font-size: 2.5vh;
-    font-weight: 200;
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    top: 56%;
-    color: black;
-}
-.pkgDesc{
-    font-size: 2.7vh;
-    font-weight: 400;
-    position: absolute;
-    left: 3%;
-    width: 94%;
-    height: 23%;
-    border-radius: 10px;
-    background-color: rgba(0,0,0,0.1);
-    overflow: auto;
-    top: 75%;
-    text-align: left;
-    padding: 5%;
-    color: black;
-
-}
-.pkgDesc::-webkit-scrollbar {
-    width: 6px;
-    background-color: #F5F5F5;
-} 
-.pkgDesc::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0,0.3);
-    border-radius: 25px;
-}
-.pkgEndDate{
-    position: absolute;
-    color: white;
-    width: 70%;
-    background-color: rgba(0, 0, 0, 0.815);
-    font-size: 2.5vh;
-    left: 3%;
-    top: 88%;
-    padding-left: 5%;
-    border-radius: 25px;
-    text-shadow: 0px 0px 1px rgb(255, 255, 255);
-}
-.pkgStarsContainer{
-    position: absolute;
-    z-index: 2;
-    background-color: rgba(0,0,0,0.4);
-    border-radius: 15px;
-    padding-left: 5px;
-    left: 9%;
-    top: 5%;
-    width: 26.4vh;
-}
-.pkgStar{    
-    display: inline-block;
-    padding-right: 2px;
-}
-a.allReview{
-    position: absolute;
-    color: red;
-    text-decoration:none;
-    font-size: 2vh;
-    left: 15%;
-    top: 15%;
-}
-a.allReview:hover{
-    color: white;
-    text-shadow: 0px 0px 6px black;
-}
-div.add2CartBttn{
-    position: absolute;
-    border-radius: 18px;
-    padding: 1% 5%;
-    font-size: 3vh;
-    background-color: #FDB931;
-    color: black;
-    border: none;
-    font-weight: 300;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 66%;
-    cursor: pointer;
-}
-div.add2CartBttn:hover{
-    color: white;
-    border: 1px groove goldenrod;
-    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-}
-/**************************************************/
-/* Header Deals Page styling */
-.filter{
-    width: auto;
-    height: 8vh;
-    margin: 1vh 5vh;
-    text-align: right;
-    display: inline-block;
-    font-family: 'Segoe UI';
-    font-weight: 300;
-}
-.filterContainer{
-    position: absolute;
-    top: 15vh;
-    left: 5vw;    
-}
-.selectionTitle:hover{
-    color:red;
-    cursor: pointer;
-}
-.selection{
-    font-weight: 500;
-}
-button.moreFilter{
-    background-color: transparent;
-    border: none;
-    font-weight: 500;
-    font-family: 'Segoe UI';
-    position: absolute;
-    font-size: 5vh;
-    top: 17vh;
-    left: 80%;
-    color: white;
-    cursor: pointer;
-}
-button.moreFilter:hover{
-    color: rgb(37, 189, 209);
-}
-
-
-/* ************************* */
-/* Search Icon */
-.searchWrapper {
-    position: absolute;
-    top: 0;
-    left: 68vw;
-    width: 29vw;
-    height: 12vh;
-    z-index: 0;
-    transition: all 2s;
-}
-
-.searchIcon {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 9vh;
-    height: 9vh;
-    background: rgb(255, 246, 224);
-    border-radius: 50%;
-    transition: all 1s;
-    z-index: 4;
-    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.6);
-}
-.searchIcon:hover {
-    cursor: grabbing;
-    background: rgb(255, 255, 255);
-    opacity: 1;
-
-}
-.searchIcon::before {
-    content: "";
-    position: absolute;
-    margin: auto;
-    top: calc(0.22*12vh);
-    right: 0;
-    bottom: 0;
-    left: calc(0.22*12vh);
-    width: calc(0.12*12vh);
-    height: calc(0.02*12vh);
-    background: black;
-    transform: rotate(45deg);
-    transition: all .5s;
-}
-.searchIcon::after {
-    content: "";
-    position: absolute;
-    margin: auto;
-    top: calc(-0.05*12vh);
-    right: 0;
-    bottom: 0;
-    left: calc(-0.05*12vh);
-    width: calc(0.25*12vh);
-    height: calc(0.25*12vh);
-    border-radius: 50%;
-    border: 2px solid black;
-    transition: all .5s;
-}
-input.searchCom {
-    font-family: monospace;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: calc(0.5*12vh);
-    height: calc(0.5*12vh);
-    outline: none;
-    border: none;
-    background: rgb(255, 246, 224);
-    color: black;
-    text-shadow: 0 0 10px black;
-    padding: 0 calc(0.8*12vh) 0 calc(0.2*12vh);
-    border-radius: 30px;
-    box-shadow: 0 0 25px 0 rgb(255, 246, 224), 0 40px 35px 0 rgba(0, 0, 0, 0.01);
-    transition: all 1s;
-    opacity: 0;
-    z-index: 5;
-    font-weight: bolder;
-    letter-spacing: 0.1em;
-}
-input.searchCom:hover {
-    cursor: grabbing;
-}
-input.searchCom:focus {
-    width: 100%;
-    opacity: 1;
-    cursor: text;
-}
-input.searchCom:focus ~ .searchIcon {
-    width: calc(0.5*12vh);
-    height: calc(0.5*12vh);
-    border-radius: 0px 50% 50% 0px;
-    right: calc(-270/300*29vw);
-    background: rgba(0,0,0,0.7);
-    z-index: 6;
-}
-input.searchCom:focus ~ .searchIcon:hover{
-    background-color: rgba(0,0,0,0.9);
-}
-
-input.searchCom:focus ~ .searchIcon:hover::before {
-    top: 0;
-    left: 0;
-    width: calc(0.32*12vh);
-    height: calc(0.05*12vh);
-    border-radius: 50px;
-}
-input.searchCom:focus ~ .searchIcon:hover::after {
-    top: 0;
-    left: 0;
-    width: calc(0.32*12vh);
-    height: calc(0.02*12vh);
-    border-radius: 50px;
-}
-        
-input.searchCom:focus ~ .searchIcon::before {
-    background: white;
-    top: 0;
-    left: 0;
-    width: calc(0.25*12vh);
-    border-radius: 50px;
-}
-input.searchCom:focus ~ .searchIcon::after {
-    top: 0;
-    left: 0;
-    width: calc(0.25*12vh);
-    height: calc(0.04*12vh);
-    border: none;
-    border-radius: 50px;
-    background: white;
-    transform: rotate(-45deg);
-}
-input.searchCom:focus ~ .searchIcon::placeholder {
-    color: black;
-    opacity: 0.5;
-    font-weight: 300;
-    font-size: 120%;
-}
-
-
 
 
 
