--- a/style/style.css
+++ b/style/style.css
@@ -17,22 +17,134 @@ html {
     margin:0;
     padding: 0;
 }
-
-
-/* IMPORTANT */
 body{
-    background-color: black;
-}
-body::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.973);
-    border-radius: 25px;
-    border: 2px solid white;
-}
-body::-webkit-scrollbar {
-    width: 13px;
-    background-color: #F5F5F5;
-} 
-
+    overflow: hidden;
+    margin: 0;
+  }
+  .box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: #772B39;
+  }
+  
+  .grid {
+    position: relative;
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px;
+    width: 400px;
+    height: 450px;
+    margin: auto;
+  }
+  
+  .col1-row1 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-right: 100px solid #ff0024;
+    transform: rotate(90deg);
+  }
+  
+  .col2-row1 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-left: 100px solid #ff3e74;
+    transform: rotate(-90deg);
+  }
+  
+  .col3-row1 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-right: 100px solid #ff6e82;
+    transform: rotate(90deg);
+  }
+  
+  .col4-row1 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-left: 100px solid #fdd8de;
+    transform: rotate(-90deg);
+  }
+  
+  .col1-row2 > .triangle {
+    border-bottom: 50px solid #ff3e74;
+    border-right: 50px solid #ff3e74;
+    border-top: 50px solid #ff6e81;
+    border-left: 50px solid #ff6e81;
+    transform: rotate(90deg);
+  }
+  
+  .col2-row2 > .triangle {
+    border-bottom: 50px solid #ff0024;
+    border-right: 50px solid #ff0024;
+    border-top: 50px solid #fdd7de;
+    border-left: 50px solid #fdd7de;
+    transform: rotate(180deg);
+  }
+  
+  .col3-row2 > .triangle {
+    border-bottom: 50px solid #ff0023;
+    border-right: 50px solid #ff0023;
+    border-top: 50px solid #ff3e74;
+    border-left: 50px solid #ff3e74;
+    transform: rotate(90deg);
+  }
+  
+  .col4-row2 > .triangle {
+    border-bottom: 50px solid #ff6d81;
+    border-right: 50px solid #ff6d81;
+    border-top: 50px solid #ff0024;
+    border-left: 50px solid #ff0024;
+    transform: rotate(180deg);
+  }
+  
+  .col1-row3 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-left: 100px solid #fdd8de;
+    transform: rotate(90deg);
+  }
+  
+  .col2-row3 > .triangle {
+    border-bottom: 50px solid #ff3c73;
+    border-right: 50px solid #ff3c73;
+    border-top: 50px solid #ff6e82;
+    border-left: 50px solid #ff6e82;
+    transform: rotate(180deg);
+  }
+  
+  .col3-row3 > .triangle {
+    border-bottom: 50px solid #fdd8de;
+    border-right: 50px solid #fdd8de;
+    border-top: 50px solid #ff6e81;
+    border-left: 50px solid #ff6e81;
+    transform: rotate(90deg);
+  }
+  
+  .col4-row3 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-left: 100px solid #ff3e74;
+    transform: rotate(0deg);
+  }
+  
+  .col2-row4 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-right: 100px solid #ff0024;
+    transform: rotate(0deg);
+  }
+  
+  .col3-row4 > .triangle {
+    border-bottom: 100px solid transparent;
+    border-right: 100px solid #ff3d74;
+    transform: rotate(270deg);
+  }
+  .text{
+    position: absolute;
+    top: 40%;
+    color: #fff;
+    font-size: 40px;
+    font-family: 'Felipa', cursive;
+    perspective: 400;
+    code, [data-char="x"]{
+      font-size: 18px;
+    }
+  }
 
 .exploreImage h1,.exploreImage p{
     font-family:"Segoe UI";
@@ -86,28 +198,6 @@ body::-webkit-scrollbar {
     left: 10px; 
     bottom: 10px;
 }
-.next {
-    position: absolute; 
-    top: 10px; 
-    right: 10px; 
-    bottom: 10px;
-}
-.slider-dots {
-	opacity: 0.2;
-  list-style: none;
-  display: inline-block;
-  padding-left: 0;
-  margin-bottom: 0;
-  position:absolute;
-  left:50%;
-  bottom:3%;
-  transform: translate(-50%, 0);
-  z-index:3;
-  -webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
 /* **********************************Header Home Styling Ends*************************************** */
 
 
@@ -141,16 +231,6 @@ div.socIcon{
     display: inline-block;
     margin: 3px;
     cursor: pointer;
-}
-div.brandSocialMedia{
-    left: 70%;
-    top: 23%;
-}
-a.emailFooter{
-    text-decoration: none;
-    color: white;
-    left: 67%;
-    top: 49%;
 }
 /* **********************************FooterStyling Ends*************************************** */
 
